--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		<a id="Planner-mensual" onclick="navigate(this.id)" href="#"> <i class="fa-regular fa-calendar"></i> Planner-mensual</a>
 		<a id="Planner-semanal" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-calendar-week"></i> Planner-semanal</a>
 		<a id="Tareas" onclick="navigate(this.id)" href="#"> <i class="fa-regular fa-square-check"></i> Tareas</a>
-		<a id="Materias" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-book-open"></i> Materias</a>
+		<a id="Cursos" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-book-open"></i> Cursos</a>
 		<a id="Resúmenes" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-align-justify"></i> Resúmenes</a>
 		<a id="Libros" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-book"></i> Libros</a>
 		<a id="Notas" onclick="navigate(this.id)" href="#"> <i class="fa-regular fa-bookmark"></i> Notas</a>
