Update and rename index.html to menu.html
Signed-off-by: luluhowl <156851749+luluhowl@users.noreply.github.com>

--- a/menu.html
+++ b/menu.html
@@ -82,7 +82,19 @@
 		function navigate(id) {
 
 			if (id == 'Planner-mensual')
-				window.open("https://www.notion.so/152a2862e91e4945b4015ded5ed5fdf9?v=f16d61fd9072411b890e377bd7d0d068&pvs=4", '_parent').focus();
+				window.open("https://www.notion.so/9f158c9d55094336a06d719c7b197e23?v=8273b99779724c70bbc7d467e924a988&pvs=4", '_parent').focus();
+			else if (id == 'Planner-semanal')
+				window.open("https://www.notion.so/Planner-semanal-297e35a954264347b9ab338d49465359?pvs=4", '_parent').focus();
+			else if (id == 'Tareas')
+				window.open("https://www.notion.so/Tareas-7bddbbba224b414b99adff29d44c6993?pvs=4", '_parent').focus();
+			else if (id == 'Cursos')
+				window.open("https://www.notion.so/Cursos-b3b26d9fa31a4befa76e468142e44a2e?pvs=4", '_parent').focus();
+			else if (id == 'Resúmenes')
+				window.open("https://www.notion.so/Res-menes-700435bdfa1343608270fb37044cf20c?pvs=4", '_parent').focus();
+			else if (id == 'Libros')
+				window.open("https://www.notion.so/Libros-13880cd80ecf49f1af9520c056523ca6?pvs=4", '_parent').focus();
+			else if (id == 'Notas')
+				window.open("https://www.notion.so/Notas-c17ab61c38cb45e9acaebe86169b931a?pvs=4", '_parent').focus();
 		}
 	</script>
 
