--- a/menu.html
+++ b/menu.html
@@ -82,7 +82,7 @@
 		function navigate(id) {
 
 			if (id == 'Planner-mensual')
-				window.open("https://www.notion.so/9f158c9d55094336a06d719c7b197e23?v=8273b99779724c70bbc7d467e924a988&pvs=4", '_parent').focus();
+				window.open("https://www.notion.so/Planner-mensual-812b4b96dcbe47f6a802b527022c349a?pvs=4", '_parent').focus();
 			else if (id == 'Planner-semanal')
 				window.open("https://www.notion.so/Planner-semanal-297e35a954264347b9ab338d49465359?pvs=4", '_parent').focus();
 			else if (id == 'Tareas')
