--- a/menu.html
+++ b/menu.html
@@ -65,6 +65,8 @@
 		<a id="Resúmenes" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-align-justify"></i> Resúmenes</a>
 		<a id="Libros" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-book"></i> Libros</a>
 		<a id="Notas" onclick="navigate(this.id)" href="#"> <i class="fa-regular fa-bookmark"></i> Notas</a>
+		<a id="EVA" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-school"></i> EVA</a>
+                <a id="Bedelias" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-school"></i> Bedelias</a>
 
 
 
@@ -95,6 +97,10 @@
 				window.open("https://www.notion.so/Libros-13880cd80ecf49f1af9520c056523ca6?pvs=4", '_parent').focus();
 			else if (id == 'Notas')
 				window.open("https://www.notion.so/Notas-c17ab61c38cb45e9acaebe86169b931a?pvs=4", '_parent').focus();
+			else if (id == 'EVA')
+				window.open("https://eva.fmed.edu.uy/login/index.php", '_blank').focus();
+			else if (id == 'Bedelias')
+				window.open("https://bedelias.udelar.edu.uy/", '_blank').focus();
 		}
 	</script>
 
