--- a/menu.html
+++ b/menu.html
@@ -98,7 +98,7 @@
 			else if (id == 'Notas')
 				window.open("https://www.notion.so/Notas-c17ab61c38cb45e9acaebe86169b931a?pvs=4", '_parent').focus();
 			else if (id == 'EVA')
-				window.open("https://eva.fmed.edu.uy/login/index.php", '_blank').focus();
+				window.open("https://eva.fmed.edu.uy/", '_blank').focus();
 			else if (id == 'Bedelias')
 				window.open("https://bedelias.udelar.edu.uy/", '_blank').focus();
 		}
